Riley Williams          <rhw@InfraDead.Org>              8 Nov 2001-16 May 2002

-------------------------------------------------------------------------------

Thu May 16 06:24:36 BST 2002	Riley Williams <rhw@InfraDead.Org>

	* Release history brought up to date. The 0.1.0 kernel release
	  has now been issued, and a source of early ELKS kernels has
	  been found and announced.

Sat Apr 13 19:42:16 BST 2002	Riley Williams <rhw@InfraDead.Org>

	* Inserted correct Base HRef in all pages.

Sat Apr  6 22:45:56 BST 2002	Riley Williams <rhw@InfraDead.Org>

	* Martijn's ELKS banner now marked as a binary file.

Fri Apr  5 18:36:54 BST 2002	Riley Williams <rhw@InfraDead.Org>

	* Martijn's ELKS banner included on ELKS home page.

Fri Mar 29 04:09:16 BST 2002	Martijn Bakker <martijn@insecure.nl>

	* New ELKS banner supplied.

Mon Mar 11 23:05:35 GMT 2002	Riley Williams <rhw@MemAlpha.cx>

	* Release history brought up to date.

Wed Jan  9 23:36:32 GMT 2002	Riley Williams <rhw@MemAlpha.cx>

	* Prepared for addition of images.zip links to download index.

Thu Nov 29 01:34:48 GMT 2001	Riley Williams <rhw@MemAlpha.cx>

	* Corrected punctuation in homepage that led to wierd layout.

Sat Nov 24 16:44:47 EET 2001	Harry Kalogirou <harkal@gmx.net>

	* Wrote the download page.
	* Reformated the home page.
	* Added new release entries.

Tue Nov 20 20:42:09 GMT 2001	Riley Williams <rhw@MemAlpha.cx>

	* Moved old homepage to "Introduction to ELKS" subpage.
	* Committed outline of new home page, format as agreed on the
	  Linux-8086 mailing list.

Mon Nov 12 23:57:31 EET 2001	Harry Kalogirou <harkal@gmx.net>

	* Added info about the mailing list archive.
	* Replaced tabs with spaces on the contributor list at the top of
	  this file.

Mon Nov 12 21:53:33 GMT 2001	Michael McConnell <soruk@eridani.co.uk>

	* Updated ELKS logo with transparent version.

Mon Nov 12 00:00:00 GMT 2001	Riley Williams <rhw@MemAlpha.cx>

	* Added "description" and "keywords" fields to all HTML headers.