@@ -26,7 +26,7 @@ Alt="Baby Linux Logo" Height=77 Width=65></TD>
 
 <P Align=Center>|
 <A HRef="../CHANGELOG.txt">Website History</A> |
-<A HRef="../download.html">Download</A> |
+<A HRef="../download/">Download</A> |
 FAQ |
 <A HRef="../history/">History</A> |
 <A HRef="../introduction.html">Introduction</A> |
