@@ -23,7 +23,7 @@
       </tr>
     </table>
 
-    <p align="center">| <a href="../CHANGELOG.txt">Website History</a> | <a href="../download.html">Download</a> | FAQ | <a
+    <p align="center">| <a href="../CHANGELOG.txt">Website History</a> | <a href="../download/">Download</a> | FAQ | <a
     href="../history/">History</a> | <a href="../introduction.html">Introduction</a> | <a href="../lists/">Mailing Lists</a>
     | <a href="../news/">News</a> | <a href="../releases.html">Releases</a> | <a href="../">Home</a> |</p>
     <hr width="90%">
